Merge main into STB-2824: resolve conflicts by taking main versions for controller/service/tests