@@ -1,33 +1,11 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.io.IOException;
-import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.Logger;
+import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.core.read.ListAppender;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpSession;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -39,6 +17,7 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.LoggerFactory;
 import org.springframework.mock.web.MockHttpSession;
+import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authorization.AuthorizationDeniedException;
@@ -49,13 +28,6 @@ import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import org.springframework.web.servlet.view.RedirectView;
-
-import ch.qos.logback.classic.Level;
-import ch.qos.logback.classic.Logger;
-import ch.qos.logback.classic.spi.ILoggingEvent;
-import ch.qos.logback.core.read.ListAppender;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpSession;
 import uk.gov.justice.laa.portal.landingpage.config.MapperConfig;
 import uk.gov.justice.laa.portal.landingpage.constants.ModelAttributes;
 import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
@@ -97,6 +69,35 @@ import uk.gov.justice.laa.portal.landingpage.techservices.SendUserVerificationEm
 import uk.gov.justice.laa.portal.landingpage.techservices.TechServicesApiResponse;
 import uk.gov.justice.laa.portal.landingpage.utils.LogMonitoring;
 import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
+
+import java.io.IOException;
+import java.lang.reflect.Method;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UserControllerTest {
@@ -144,8 +145,6 @@ class UserControllerTest {
         String searchQuery = "Firm 1";
         EntraUser entraUser = EntraUser.builder().id(UUID.randomUUID()).build();
         FirmDto firm1 = new FirmDto(UUID.randomUUID(), "Test Firm 1", "F1");
-        FirmDto firm2 = new FirmDto(UUID.randomUUID(), "Test Firm 2", "F2");
-        List<FirmDto> allFirms = List.of(firm1, firm2);
 
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(entraUser);
         when(firmService.getUserAccessibleFirms(entraUser, searchQuery)).thenReturn(List.of(firm1));
@@ -161,11 +160,9 @@ class UserControllerTest {
     @Test
     void getFirms_WithSearchQuery_ReturnsFilteredFirms_By_Code() {
         // Arrange
-        String searchQuery = "F20"; // Changed to 3 characters to meet minimum requirement
+        String searchQuery = "F2";
         EntraUser entraUser = EntraUser.builder().id(UUID.randomUUID()).build();
-        FirmDto firm1 = new FirmDto(UUID.randomUUID(), "Test Firm 1", "F1");
-        FirmDto firm2 = new FirmDto(UUID.randomUUID(), "Test Firm 2", "F20");
-        List<FirmDto> allFirms = List.of(firm1, firm2);
+        FirmDto firm2 = new FirmDto(UUID.randomUUID(), "Test Firm 2", "F2");
 
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(entraUser);
         when(firmService.getUserAccessibleFirms(entraUser, searchQuery)).thenReturn(List.of(firm2));
@@ -182,121 +179,20 @@ class UserControllerTest {
     void getFirms_WithoutSearchQuery_ReturnsAllFirms() {
         // Arrange
         String searchQuery = "";
-
-        // Act
-        List<FirmDto> result = userController.getFirms(authentication, searchQuery);
-
-        // Assert - Now expecting empty result for short/empty queries
-        assertThat(result).isEmpty();
-        verify(firmService, never()).getUserAccessibleFirms(any(), any());
-        verify(loginService, never()).getCurrentEntraUser(any());
-    }
-
-    @Test
-    void getFirms_WithShortQuery_ReturnsEmptyList() {
-        // Arrange
-        String searchQuery = ""; // Empty string, below minimum of 1 character
-
-        // Act
-        List<FirmDto> result = userController.getFirms(authentication, searchQuery);
-
-        // Assert - Should return empty result for empty queries
-        assertThat(result).isEmpty();
-        verify(firmService, never()).getUserAccessibleFirms(any(), any());
-        verify(loginService, never()).getCurrentEntraUser(any());
-    }
-
-    @Test
-    void getFirms_WithValidQuery_ReturnsFilteredFirms() {
-        // Arrange
-        String searchQuery = "Test"; // 4 characters, meets minimum requirement
         EntraUser entraUser = EntraUser.builder().id(UUID.randomUUID()).build();
-        FirmDto expectedFirm = new FirmDto(UUID.randomUUID(), "Test Firm", "TF001");
+        List<FirmDto> expectedFirms = List.of(
+                new FirmDto(UUID.randomUUID(), "Firm A", "F1"),
+                new FirmDto(UUID.randomUUID(), "Firm B", "F2"));
 
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(entraUser);
-        when(firmService.getUserAccessibleFirms(entraUser, searchQuery)).thenReturn(List.of(expectedFirm));
+        when(firmService.getUserAccessibleFirms(entraUser, searchQuery)).thenReturn(expectedFirms);
 
         // Act
         List<FirmDto> result = userController.getFirms(authentication, searchQuery);
 
         // Assert
-        assertThat(result).isEqualTo(List.of(expectedFirm));
+        assertThat(result).isEqualTo(expectedFirms);
         verify(firmService).getUserAccessibleFirms(entraUser, searchQuery);
-    }
-
-    @Test
-    void searchFirms_WithEmptyQuery_ReturnsEmptyList() {
-        // Arrange
-        String searchQuery = "";
-
-        // Act
-        List<Map<String, String>> result = userController.searchFirms(searchQuery);
-
-        // Then
-        assertThat(result).isEmpty();
-        verify(firmService, never()).searchFirms(any());
-    }
-
-    @Test
-    void searchFirms_WithNullQuery_ReturnsEmptyList() {
-        // Arrange - Using null as default value will be ""
-        String searchQuery = null;
-
-        // Act
-        List<Map<String, String>> result = userController.searchFirms("");
-
-        // Then
-        assertThat(result).isEmpty();
-        verify(firmService, never()).searchFirms(any());
-    }
-
-    @Test
-    void searchFirms_WithWhitespaceOnlyQuery_ReturnsEmptyList() {
-        // Arrange
-        String searchQuery = "   ";
-
-        // Act
-        List<Map<String, String>> result = userController.searchFirms(searchQuery);
-
-        // Then
-        assertThat(result).isEmpty();
-        verify(firmService, never()).searchFirms(any());
-    }
-
-    @Test
-    void searchFirms_WithSingleCharacterQuery_ReturnsResults() {
-        // Arrange
-        String searchQuery = "A";
-        FirmDto mockFirm = new FirmDto(UUID.randomUUID(), "Alpha Firm", "A001");
-
-        when(firmService.searchFirms(searchQuery)).thenReturn(List.of(mockFirm));
-
-        // Act
-        List<Map<String, String>> result = userController.searchFirms(searchQuery);
-
-        // Then
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).get("name")).isEqualTo("Alpha Firm");
-        assertThat(result.get(0).get("id")).isEqualTo(mockFirm.getId().toString());
-        verify(firmService).searchFirms(searchQuery);
-    }
-
-    @Test
-    void searchFirms_WithValidQuery_ReturnsResults() {
-        // Arrange
-        String searchQuery = "Legal";
-        FirmDto mockFirm = new FirmDto(UUID.randomUUID(), "Legal Services", "LS001");
-
-        when(firmService.searchFirms(searchQuery)).thenReturn(List.of(mockFirm));
-
-        // Act
-        List<Map<String, String>> result = userController.searchFirms(searchQuery);
-
-        // Then
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).get("name")).isEqualTo("Legal Services");
-        assertThat(result.get(0).get("id")).isEqualTo(mockFirm.getId().toString());
-        verify(firmService).searchFirms(searchQuery);
     }
 
     @Test
@@ -527,6 +423,7 @@ class UserControllerTest {
         // Act
         String viewName = userController.editUser(userId, model);
 
+        assertThat(viewName).isEqualTo("edit-user");
         verify(userService).getUserProfileById(userId);
     }
 
@@ -907,16 +804,16 @@ class UserControllerTest {
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
         // Setup all available roles
         AppRoleDto testRole1 = new AppRoleDto();
-        testRole1.setId("testAppRoleId1");
+        testRole1.setId(UUID.randomUUID().toString());
         testRole1.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole2 = new AppRoleDto();
-        testRole2.setId("testAppRoleId2");
+        testRole2.setId(UUID.randomUUID().toString());
         testRole2.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole3 = new AppRoleDto();
-        testRole3.setId("testAppRoleId3");
+        testRole3.setId(UUID.randomUUID().toString());
         testRole3.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole4 = new AppRoleDto();
-        testRole4.setId("testUserAppRoleId");
+        testRole4.setId(UUID.randomUUID().toString());
         testRole4.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppDto currentApp = new AppDto();
         currentApp.setId("testAppId");
@@ -952,13 +849,13 @@ class UserControllerTest {
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
         // Setup all available roles
         AppRoleDto testRole1 = new AppRoleDto();
-        testRole1.setId("testAppRoleId1");
+        testRole1.setId(UUID.randomUUID().toString());
         testRole1.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole2 = new AppRoleDto();
-        testRole2.setId("testAppRoleId2");
+        testRole2.setId(UUID.randomUUID().toString());
         testRole2.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole3 = new AppRoleDto();
-        testRole3.setId("testAppRoleId3");
+        testRole3.setId(UUID.randomUUID().toString());
         testRole3.setUserTypeRestriction(new UserType[] {UserType.INTERNAL, UserType.EXTERNAL});
         AppDto currentApp = new AppDto();
         currentApp.setId("testAppId");
@@ -977,6 +874,7 @@ class UserControllerTest {
         // Then
         List<AppRoleViewModel> appRoleViewModels = (List<AppRoleViewModel>) model.getAttribute("roles");
         Assertions.assertEquals(appRoleViewModels.size(), 3);
+        assertThat(view).isEqualTo("edit-user-roles");
     }
 
     @Test
@@ -989,24 +887,24 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(testUserProfile));
         // Setup test user roles
         AppRoleDto testUserRole = new AppRoleDto();
-        testUserRole.setId("testUserAppRoleId");
+        testUserRole.setId(UUID.randomUUID().toString());
         List<AppRoleDto> testUserRoles = List.of(testUserRole);
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
         // Setup all available roles
         AppRoleDto testRole1 = new AppRoleDto();
-        testRole1.setId("testAppRoleId1");
+        testRole1.setId(UUID.randomUUID().toString());
         testRole1.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole2 = new AppRoleDto();
-        testRole2.setId("testAppRoleId2");
+        testRole2.setId(UUID.randomUUID().toString());
         testRole2.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         AppRoleDto testRole3 = new AppRoleDto();
-        testRole3.setId("testAppRoleId3");
+        testRole3.setId(UUID.randomUUID().toString());
         testRole3.setUserTypeRestriction(new UserType[] {UserType.INTERNAL, UserType.EXTERNAL});
         AppRoleDto testRole4 = new AppRoleDto();
-        testRole4.setId("testUserAppRoleId");
+        testRole4.setId(UUID.randomUUID().toString());
         testRole4.setUserTypeRestriction(new UserType[] {UserType.INTERNAL});
         AppDto currentApp = new AppDto();
-        currentApp.setId("testAppId");
+        currentApp.setId(UUID.randomUUID().toString());
         currentApp.setName("testAppName");
         List<String> selectedApps = List.of(currentApp.getId());
         MockHttpSession testSession = new MockHttpSession();
@@ -1022,6 +920,7 @@ class UserControllerTest {
         // Then
         List<AppRoleViewModel> appRoleViewModels = (List<AppRoleViewModel>) model.getAttribute("roles");
         Assertions.assertEquals(appRoleViewModels.size(), 4);
+        assertThat(view).isEqualTo("edit-user-roles");
     }
 
     @Test
@@ -1042,6 +941,62 @@ class UserControllerTest {
         entraUser.setId(userId.toString());
         entraUser.setFullName("Test User");
 
+        UUID appId = UUID.randomUUID();
+        AppDto testApp = AppDto.builder().id(appId.toString()).name("Test App").build();
+
+        UUID appId2 = UUID.randomUUID();
+        AppDto testApp2 = AppDto.builder().id(appId2.toString()).name("Test App 2").build();
+
+        UserProfileDto userProfile = UserProfileDto.builder()
+                .id(userId)
+                .entraUser(entraUser)
+                .userType(UserType.EXTERNAL)
+                .build();
+
+        UserProfile editorUserProfile = UserProfile.builder()
+                .id(UUID.randomUUID())
+                .userType(UserType.EXTERNAL)
+                .appRoles(new HashSet<>())
+                .build();
+
+        when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.of(userProfile));
+        when(userService.getUserAppsByUserId(userId.toString())).thenReturn(Set.of(testApp, testApp2));
+        when(userService.getAppsByUserType(any())).thenReturn(List.of(testApp, testApp2));
+        when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true);
+
+        // When
+        String view = userController.editUserApps(userId.toString(), null, model, session, authentication);
+
+        // Then
+        assertThat(view).isEqualTo("edit-user-apps");
+        assertThat(model.getAttribute("user")).isNotNull();
+        UserProfileDto returnedUser = (UserProfileDto) model.getAttribute("user");
+        Assertions.assertEquals(userProfile.getId(), returnedUser.getId());
+        Assertions.assertEquals(userProfile.getFullName(), returnedUser.getFullName());
+
+        // Check the correct model attribute name "apps"
+        assertThat(model.getAttribute("apps")).isNotNull();
+        @SuppressWarnings("unchecked")
+        List<AppDto> apps = (List<AppDto>) model.getAttribute("apps");
+        assertThat(apps).hasSize(2);
+        assertThat(apps.getFirst().isSelected()).isTrue(); // Should be selected because user has this app
+        assertThat(apps.get(1).isSelected()).isTrue();
+    }
+
+    @Test
+    public void testEditUserAppsReturnsCorrectViewAndAttributes_hide_non_editable_app() throws ServletException {
+        // Given
+        final UUID userId = UUID.randomUUID();
+        EntraUserDto entraUser = new EntraUserDto();
+        entraUser.setId(userId.toString());
+        entraUser.setFullName("Test User");
+
+        UserProfile editorUserProfile = UserProfile.builder()
+                .id(UUID.randomUUID())
+                .userType(UserType.EXTERNAL)
+                .appRoles(new HashSet<>())
+                .build();
         UserProfileDto userProfile = UserProfileDto.builder()
                 .id(userId)
                 .entraUser(entraUser)
@@ -1049,16 +1004,19 @@ class UserControllerTest {
                 .build();
 
         UUID appId = UUID.randomUUID();
-        AppDto testApp = new AppDto();
-        testApp.setId(appId.toString());
-        testApp.setName("Test App");
+        AppDto testApp = AppDto.builder().id(appId.toString()).name("Test App").build();
+        UUID appId2 = UUID.randomUUID();
+        AppDto testApp2 = AppDto.builder().id(appId2.toString()).name("Test App 2").build();
 
         when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.of(userProfile));
-        when(userService.getUserAppsByUserId(userId.toString())).thenReturn(Set.of(testApp));
-        when(userService.getAppsByUserType(any())).thenReturn(List.of(testApp));
+        when(userService.getUserAppsByUserId(userId.toString())).thenReturn(Set.of(testApp, testApp2));
+        when(userService.getAppsByUserType(any())).thenReturn(List.of(testApp, testApp2));
+        when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
+        when(roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, testApp)).thenReturn(true);
+        when(roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, testApp2)).thenReturn(false);
 
         // When
-        String view = userController.editUserApps(userId.toString(), null, model, session);
+        String view = userController.editUserApps(userId.toString(), null, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-apps");
@@ -1154,19 +1112,28 @@ class UserControllerTest {
         testSession.setAttribute("selectedApps", List.of(appId1.toString(), appId2.toString()));
         existingRoles.put(0, List.of(role1.toString(), role2.toString()));
         existingRoles.put(1, List.of());
+        UUID role3 = UUID.randomUUID();
+        UUID appId3 = UUID.randomUUID();
         AppDto app1 = AppDto.builder().id(appId1.toString()).name("app1").build();
         AppDto app2 = AppDto.builder().id(appId2.toString()).name("app2").build();
+        AppDto app3 = AppDto.builder().id(appId3.toString()).name("app3").build();
         AppRoleDto app1Role1Dto = AppRoleDto.builder().id(role1.toString())
                 .app(app1).name("role1").build();
         AppRoleDto app1Role2Dto = AppRoleDto.builder().id(role2.toString())
                 .app(app1).name("role2").build();
-        Map<String, AppRoleDto> app1Roles = Map.of(role1.toString(), app1Role1Dto, role2.toString(), app1Role2Dto);
+        AppRoleDto app1Role3Dto = AppRoleDto.builder().id(role2.toString())
+                .app(app1).name("role3").build();
+        Map<String, AppRoleDto> app1Roles = Map.of(role1.toString(), app1Role1Dto, role2.toString(), app1Role2Dto,
+                role3.toString(), app1Role3Dto);
         testSession.setAttribute("editUserAllSelectedRoles", existingRoles);
         when(userService.getRolesByIdIn(any())).thenReturn(app1Roles);
-        when(userService.getAppsByUserType(any())).thenReturn(List.of(app1, app2));
+        when(userService.getAppsByUserType(any())).thenReturn(List.of(app1, app2, app3));
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true, true, false);
         // When
         model = new ExtendedModelMap();
-        String view = userController.editUserRolesCheckAnswer(userId, null, model, testSession);
+        String view = userController.editUserRolesCheckAnswer(userId, null, model, testSession, authentication);
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
@@ -1175,6 +1142,62 @@ class UserControllerTest {
         assertThat(selectedAppRole.get(0).getAppName()).isEqualTo("app1");
         assertThat(selectedAppRole.get(1).getRoleName()).isEqualTo("role2");
         assertThat(selectedAppRole.get(2).getRoleName()).isEqualTo("No Role selected");
+    }
+
+    @Test
+    void editUserRolesCheckAnswer_index_error() {
+        // Given
+        final String userId = "550e8400-e29b-41d4-a716-446655440000"; // Valid UUID
+        UserProfileDto userProfile = UserProfileDto.builder()
+                .id(UUID.fromString(userId))
+                .userType(UserType.EXTERNAL)
+                .build();
+        when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.ofNullable(userProfile));
+
+        MockHttpSession testSession = new MockHttpSession();
+
+        // Simulate roles for previous apps already selected
+        Map<Integer, List<String>> existingRoles = new HashMap<>();
+        UUID role1 = UUID.randomUUID();
+        UUID role2 = UUID.randomUUID();
+        UUID appId1 = UUID.randomUUID();
+        testSession.setAttribute("selectedApps", List.of(appId1.toString()));
+        existingRoles.put(0, List.of(role1.toString(), role2.toString()));
+        existingRoles.put(1, List.of());
+        UUID role3 = UUID.randomUUID();
+        UUID appId3 = UUID.randomUUID();
+        AppDto app1 = AppDto.builder().id(appId1.toString()).name("app1").build();
+        UUID appId2 = UUID.randomUUID();
+        AppDto app2 = AppDto.builder().id(appId2.toString()).name("app2").build();
+        AppDto app3 = AppDto.builder().id(appId3.toString()).name("app3").build();
+        AppRoleDto app1Role1Dto = AppRoleDto.builder().id(role1.toString())
+                .app(app1).name("role1").build();
+        AppRoleDto app1Role2Dto = AppRoleDto.builder().id(role2.toString())
+                .app(app1).name("role2").build();
+        AppRoleDto app1Role3Dto = AppRoleDto.builder().id(role2.toString())
+                .app(app1).name("role3").build();
+        Map<String, AppRoleDto> app1Roles = Map.of(role1.toString(), app1Role1Dto, role2.toString(), app1Role2Dto,
+                role3.toString(), app1Role3Dto);
+        testSession.setAttribute("editUserAllSelectedRoles", existingRoles);
+        when(userService.getRolesByIdIn(any())).thenReturn(app1Roles);
+        when(userService.getAppsByUserType(any())).thenReturn(List.of(app1, app2, app3));
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true, true, false);
+        // When
+        model = new ExtendedModelMap();
+        String view = userController.editUserRolesCheckAnswer(userId, null, model, testSession, authentication);
+
+        // Then - should complete editing and redirect to manage user
+        assertThat(view).isEqualTo("edit-user-roles-check-answer");
+        List<UserRole> selectedAppRole = (List<UserRole>) model.getAttribute("selectedAppRole");
+        assertThat(selectedAppRole).hasSize(3);
+        assertThat(selectedAppRole.get(0).getAppName()).isEqualTo("app1");
+        assertThat(selectedAppRole.get(1).getRoleName()).isEqualTo("role2");
+        assertThat(selectedAppRole.get(2).getRoleName()).isEqualTo("No Role selected");
+        assertThat(selectedAppRole.get(2).getAppName()).isEqualTo("Unknown app");
+        String error = model.getAttribute("errorMessage").toString();
+        assertThat(error).isEqualTo("Unknown app selected, please re-select apps");
     }
 
     @Test
@@ -1187,7 +1210,7 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.ofNullable(userProfile));
         HttpSession session = new MockHttpSession();
         // When
-        String redirect = userController.editUserRolesCheckAnswer(userId.toString(), null, model, session);
+        String redirect = userController.editUserRolesCheckAnswer(userId.toString(), null, model, session, authentication);
 
         // Then - should redirect back when role coverage exception thrown
         assertThat(redirect).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -1207,17 +1230,17 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
         when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.ofNullable(userProfile));
-        List<String> apps = new ArrayList<>(); // Empty list
         HttpSession session = new MockHttpSession();
         when(roleAssignmentService.canAssignRole(any(), any())).thenReturn(true);
-        when(userService.updateUserRoles(userId.toString(), new ArrayList<>(), currentUserDto.getUserId())).thenReturn(Map.of("diff", "changed"));
+        when(userService.updateUserRoles(userId.toString(), new ArrayList<>(), new ArrayList<>(),
+                currentUserDto.getUserId())).thenReturn(Map.of("diff", "changed"));
         session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
         // When
         String redirect = userController.editUserRolesCheckAnswerSubmit(userId.toString(), session, authentication);
 
         // Then
         assertThat(redirect).isEqualTo("redirect:/admin/users/edit/" + userId + "/confirmation");
-        verify(userService).updateUserRoles(eq(userId.toString()), any(), any());
+        verify(userService).updateUserRoles(eq(userId.toString()), any(), any(), any());
         verify(eventService).logEvent(any());
     }
 
@@ -1251,10 +1274,9 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
         when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.ofNullable(userProfile));
-        List<String> apps = new ArrayList<>(); // Empty list
         HttpSession session = new MockHttpSession();
         when(roleAssignmentService.canAssignRole(any(), any())).thenReturn(true);
-        when(userService.updateUserRoles(userId.toString(), new ArrayList<>(), currentUserDto.getUserId()))
+        when(userService.updateUserRoles(userId.toString(), new ArrayList<>(), new ArrayList<>(), currentUserDto.getUserId()))
                 .thenReturn(Map.of("error", "Attempt to remove own External User Manager, from user profile " + userId));
         session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
         // When
@@ -1516,9 +1538,12 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.getUserAppsByUserId(userId)).thenReturn(userApps);
         when(userService.getAppsByUserType(UserType.EXTERNAL)).thenReturn(allApps);
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true);
 
         // When
-        String view = userController.editUserApps(userId, null, model, session);
+        String view = userController.editUserApps(userId, null, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-apps");
@@ -1607,13 +1632,7 @@ class UserControllerTest {
 
         Office.Address address = Office.Address.builder().addressLine1("addressLine1").city("city").postcode("pst_code").build();
         Office office1 = Office.builder().id(UUID.randomUUID()).address(address).build();
-        OfficeDto office1Dto = OfficeDto.builder().id(office1.getId())
-                .address(OfficeDto.AddressDto.builder().addressLine1(address.getAddressLine1())
-                        .city(address.getCity()).postcode(address.getPostcode()).build()).build();
         Office office2 = Office.builder().id(UUID.randomUUID()).address(address).build();
-        OfficeDto office2Dto = OfficeDto.builder().id(office2.getId())
-                .address(OfficeDto.AddressDto.builder().addressLine1(address.getAddressLine1())
-                        .city(address.getCity()).postcode(address.getPostcode()).build()).build();
         List<Office> allOffices = List.of(office1, office2);
 
         List<OfficeDto> userOffices = List.of(); // User has access to all offices
@@ -1644,7 +1663,7 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserOffices_shouldSaveOfficeForm() throws IOException {
+    void updateUserOffices_shouldSaveOfficeForm() {
         // Given
         final String userId = "user123";
         OfficesForm form = new OfficesForm();
@@ -1662,7 +1681,7 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserOffices_shouldReturnToFormOnValidationErrors() throws IOException {
+    void updateUserOffices_shouldReturnToFormOnValidationErrors() {
         // Given
         final String userId = "user123";
         OfficesForm form = new OfficesForm();
@@ -1691,7 +1710,7 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserOfficesCheck_shouldRedirectNullSessionForm() throws IOException {
+    void updateUserOfficesCheck_shouldRedirectNullSessionForm() {
         // Given
         final String userId = "user123";
         MockHttpSession testSession = new MockHttpSession();
@@ -1702,7 +1721,7 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserOfficesCheck_All_shouldDisplay() throws IOException {
+    void updateUserOfficesCheck_All_shouldDisplay() {
         // Given
         final String userId = "user123";
         MockHttpSession testSession = new MockHttpSession();
@@ -1722,7 +1741,7 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserOfficesCheck_Selected_shouldDisplay() throws IOException {
+    void updateUserOfficesCheck_Selected_shouldDisplay() {
         // Given
         OfficeModel.Address address = OfficeModel.Address.builder().addressLine1("addressLine1").city("city").postcode("pst_code").build();
         OfficeModel of1 = new OfficeModel();
@@ -1939,6 +1958,7 @@ class UserControllerTest {
         currentApp.setName("App 1");
 
         AppRoleDto role = new AppRoleDto();
+        role.setId(UUID.randomUUID().toString());
         role.setUserTypeRestriction(new UserType[] {UserType.EXTERNAL});
         List<AppRoleDto> appRoles = List.of(role);
 
@@ -1979,15 +1999,13 @@ class UserControllerTest {
         AppDto app2 = AppDto.builder().id("app-two").name("app-two").ordinal(1).build();
         AppDto app3 = AppDto.builder().id("app-three").name("app-three").ordinal(3).build();
 
-        AppRoleDto a1r1 = AppRoleDto.builder().id("a1r1").name("a1r1").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(3).build();
-        AppRoleDto a1r2 = AppRoleDto.builder().id("a1r2").name("a1r2").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(4).build();
-        AppRoleDto a1r3 = AppRoleDto.builder().id("a1r3").name("a1r3").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(1).build();
-        AppRoleDto a1r4 = AppRoleDto.builder().id("a1r4").name("a1r4").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(2).build();
-        AppRoleDto a2r1 = AppRoleDto.builder().id("a2r1").name("a2r1").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(2).build();
-        AppRoleDto a2r2 = AppRoleDto.builder().id("a2r2").name("a2r2").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(3).build();
-        AppRoleDto a2r3 = AppRoleDto.builder().id("a2r3").name("a2r3").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(1).build();
-        AppRoleDto a3r1 = AppRoleDto.builder().id("a3r1").name("a3r1").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app3).ordinal(1).build();
-        AppRoleDto a3r2 = AppRoleDto.builder().id("a3r2").name("a3r2").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app3).ordinal(2).build();
+        AppRoleDto a1r1 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a1r1").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(3).build();
+        AppRoleDto a1r2 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a1r2").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(4).build();
+        AppRoleDto a1r3 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a1r3").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(1).build();
+        AppRoleDto a1r4 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a1r4").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app1).ordinal(2).build();
+        AppRoleDto a2r1 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a2r1").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(2).build();
+        AppRoleDto a2r2 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a2r2").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(3).build();
+        AppRoleDto a2r3 = AppRoleDto.builder().id(UUID.randomUUID().toString()).name("a2r3").userTypeRestriction(new UserType[] {UserType.EXTERNAL}).app(app2).ordinal(1).build();
 
         Set<AppDto> userApps = new LinkedHashSet<>(Arrays.asList(app1, app2, app3));
 
@@ -2391,7 +2409,6 @@ class UserControllerTest {
         currentUserDto.setName("tester");
         when(loginService.getCurrentUser(authentication)).thenReturn(currentUserDto);
 
-        EntraUser entraUser = EntraUser.builder().userProfiles(Set.of(UserProfile.builder().build())).build();
         when(userService.createUser(eq(user), any(FirmDto.class), anyBoolean(), eq("tester")))
                 .thenThrow(new TechServicesClientException("Duplicate User"));
 
@@ -2416,7 +2433,6 @@ class UserControllerTest {
         currentUserDto.setName("tester");
         when(loginService.getCurrentUser(authentication)).thenReturn(currentUserDto);
 
-        EntraUser entraUser = EntraUser.builder().userProfiles(Set.of(UserProfile.builder().build())).build();
         when(userService.createUser(eq(user), any(FirmDto.class), anyBoolean(), eq("tester")))
                 .thenThrow(new RuntimeException("Bad Request!!"));
 
@@ -2712,8 +2728,8 @@ class UserControllerTest {
         String result = userController.postUser(userDetailsForm, bindingResult, testSession, model);
 
         // Then
-        // EmailValidationService should still be called even with empty email
-        verify(emailValidationService).isValidEmailDomain("");
+        // EmailValidationService should not be called even with empty email
+        verify(emailValidationService, never()).isValidEmailDomain(any());
         assertThat(result).isEqualTo("add-user-details");
     }
 
@@ -2725,7 +2741,7 @@ class UserControllerTest {
         Model testModel = new ExtendedModelMap();
 
         // When
-        String view = userController.createUserFirm(firmSearchForm, testSession, testModel);
+        String view = userController.createUserFirm(firmSearchForm, testSession, testModel, 10);
 
         // Then
         assertThat(view).isEqualTo("add-user-firm");
@@ -2886,9 +2902,13 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
         when(userService.getUserAppsByUserId(userId)).thenReturn(userApps);
         when(userService.getAppsByUserType(UserType.EXTERNAL)).thenReturn(availableApps);
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true);
 
         // When
-        String view = userController.grantAccessEditUserApps(userId, new ApplicationsForm(), model, new MockHttpSession());
+        String view = userController.grantAccessEditUserApps(userId, new ApplicationsForm(), model,
+                new MockHttpSession(), authentication);
 
         // Then
         assertThat(view).isEqualTo("grant-access-user-apps");
@@ -2944,7 +2964,7 @@ class UserControllerTest {
 
         // Then
         assertThat(result).isEqualTo("redirect:/admin/users/manage/" + userId);
-        verify(userService).updateUserRoles(userId, new ArrayList<>(), currentUserDto.getUserId());
+        verify(userService).updateUserRoles(userId, new ArrayList<>(), new ArrayList<>(), currentUserDto.getUserId());
         verify(eventService).logEvent(any(UpdateUserAuditEvent.class));
     }
 
@@ -3015,7 +3035,7 @@ class UserControllerTest {
         currentApp.setName("App 1");
 
         AppRoleDto role1 = new AppRoleDto();
-        role1.setId("role1");
+        role1.setId(UUID.randomUUID().toString());
         role1.setName("Role 1");
         final List<AppRoleDto> roles = List.of(role1);
 
@@ -3126,7 +3146,7 @@ class UserControllerTest {
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/offices");
-        verify(userService).updateUserRoles(userId, List.of("role1", "role2"), currentUserDto.getUserId());
+        verify(userService).updateUserRoles(userId, List.of("role1", "role2"), new ArrayList<>(), currentUserDto.getUserId());
         verify(eventService).logEvent(any(UpdateUserAuditEvent.class));
         assertThat(testSession.getAttribute("grantAccessUserRolesModel")).isNull();
         assertThat(testSession.getAttribute("grantAccessAllSelectedRoles")).isNull();
@@ -3162,7 +3182,7 @@ class UserControllerTest {
         @SuppressWarnings("unchecked")
         List<AppRoleViewModel> roles = (List<AppRoleViewModel>) model.getAttribute("roles");
         assertThat(roles).hasSize(1);
-        assertThat(roles.get(0).isSelected()).isFalse(); // Should be deselected due to validation error
+        assertThat(roles.getFirst().isSelected()).isFalse(); // Should be deselected due to validation error
     }
 
     @Test
@@ -3227,10 +3247,6 @@ class UserControllerTest {
                 .address(Office.Address.builder().addressLine1("Address 1").build()).build();
         Office office2 = Office.builder().id(office2Id).code("Office 2")
                 .address(Office.Address.builder().addressLine1("Address 2").build()).build();
-        OfficeDto office1Dto = OfficeDto.builder().id(office1.getId())
-                .address(OfficeDto.AddressDto.builder().addressLine1(office1.getAddress().getAddressLine1()).build()).build();
-        OfficeDto office2Dto = OfficeDto.builder().id(office2.getId())
-                .address(OfficeDto.AddressDto.builder().addressLine1(office2.getAddress().getAddressLine1()).build()).build();
 
         List<OfficeDto> userOffices = List.of(); // User has access to all offices
         List<Office> allOffices = List.of(office1, office2);
@@ -3369,7 +3385,7 @@ class UserControllerTest {
         ccmsApp.setName("CCMS Application"); // Contains "CCMS" in name
 
         AppRoleDto normalRole = new AppRoleDto();
-        normalRole.setId("role1");
+        normalRole.setId(UUID.randomUUID().toString());
         normalRole.setCcmsCode("NORMAL_ROLE");
 
         final List<AppRoleDto> roles = List.of(normalRole);
@@ -3406,7 +3422,7 @@ class UserControllerTest {
         regularApp.setName("Regular Application"); // Doesn't contain "CCMS"
 
         AppRoleDto ccmsRole = new AppRoleDto();
-        ccmsRole.setId("role1");
+        ccmsRole.setId(UUID.randomUUID().toString());
         ccmsRole.setCcmsCode("XXCCMS_FIRM_ADMIN"); // CCMS role code
 
         final List<AppRoleDto> roles = List.of(ccmsRole);
@@ -3445,22 +3461,22 @@ class UserControllerTest {
 
         // Create roles for different CCMS sections
         AppRoleDto providerRole = new AppRoleDto();
-        providerRole.setId("provider1");
+        providerRole.setId(UUID.randomUUID().toString());
         providerRole.setCcmsCode("XXCCMS_FIRM_ADMIN");
         providerRole.setApp(ccmsApp);
 
         AppRoleDto chambersRole = new AppRoleDto();
-        chambersRole.setId("chambers1");
+        chambersRole.setId(UUID.randomUUID().toString());
         chambersRole.setCcmsCode("XXCCMS_CHAMBERS_ADMIN");
         chambersRole.setApp(ccmsApp);
 
         AppRoleDto advocateRole = new AppRoleDto();
-        advocateRole.setId("advocate1");
+        advocateRole.setId(UUID.randomUUID().toString());
         advocateRole.setCcmsCode("XXCCMS_ADVOCATE");
         advocateRole.setApp(ccmsApp);
 
         AppRoleDto otherRole = new AppRoleDto();
-        otherRole.setId("other1");
+        otherRole.setId(UUID.randomUUID().toString());
         otherRole.setCcmsCode("XXCCMS_UNKNOWN_TYPE");
         otherRole.setApp(ccmsApp);
 
@@ -3503,7 +3519,7 @@ class UserControllerTest {
         regularApp.setName("Regular Application");
 
         AppRoleDto regularRole = new AppRoleDto();
-        regularRole.setId("role1");
+        regularRole.setId(UUID.randomUUID().toString());
         regularRole.setCcmsCode("REGULAR_ROLE"); // Not a CCMS role
 
         final List<AppRoleDto> roles = List.of(regularRole);
@@ -3538,7 +3554,7 @@ class UserControllerTest {
         regularApp.setName("CCMS case transfer requests");
 
         AppRoleDto regularRole = new AppRoleDto();
-        regularRole.setId("role1");
+        regularRole.setId(UUID.randomUUID().toString());
         regularRole.setCcmsCode("REQUESTS TO TRANSFER CCMS CASES_VIEWER_EXTERN"); // Not a CCMS role
 
         final List<AppRoleDto> roles = List.of(regularRole);
@@ -3573,11 +3589,11 @@ class UserControllerTest {
         mixedApp.setName("Mixed App");
 
         AppRoleDto ccmsRole = new AppRoleDto();
-        ccmsRole.setId("ccms1");
+        ccmsRole.setId(UUID.randomUUID().toString());
         ccmsRole.setCcmsCode("XXCCMS_FIRM_ADMIN");
 
         AppRoleDto regularRole = new AppRoleDto();
-        regularRole.setId("regular1");
+        regularRole.setId(UUID.randomUUID().toString());
         regularRole.setCcmsCode("REGULAR_ROLE");
 
         final List<AppRoleDto> roles = List.of(ccmsRole, regularRole);
@@ -3621,7 +3637,7 @@ class UserControllerTest {
         ccmsApp.setName("CCMS Application");
 
         AppRoleDto normalRole = new AppRoleDto();
-        normalRole.setId("role1");
+        normalRole.setId(UUID.randomUUID().toString());
         normalRole.setCcmsCode("NORMAL_ROLE");
 
         final List<AppRoleDto> roles = List.of(normalRole);
@@ -3656,7 +3672,7 @@ class UserControllerTest {
         regularApp.setName("Regular Application");
 
         AppRoleDto ccmsRole = new AppRoleDto();
-        ccmsRole.setId("role1");
+        ccmsRole.setId(UUID.randomUUID().toString());
         ccmsRole.setCcmsCode("XXCCMS_OFFICE_ADMIN");
 
         final List<AppRoleDto> roles = List.of(ccmsRole);
@@ -3695,32 +3711,32 @@ class UserControllerTest {
 
         // Create comprehensive CCMS roles for testing organization
         AppRoleDto firmRole = new AppRoleDto();
-        firmRole.setId("firm1");
+        firmRole.setId(UUID.randomUUID().toString());
         firmRole.setCcmsCode("XXCCMS_FIRM_USER");
         firmRole.setApp(ccmsApp);
 
         AppRoleDto officeRole = new AppRoleDto();
-        officeRole.setId("office1");
+        officeRole.setId(UUID.randomUUID().toString());
         officeRole.setCcmsCode("XXCCMS_OFFICE_MANAGER");
         officeRole.setApp(ccmsApp);
 
         AppRoleDto crossOfficeRole = new AppRoleDto();
-        crossOfficeRole.setId("cross1");
+        crossOfficeRole.setId(UUID.randomUUID().toString());
         crossOfficeRole.setCcmsCode("XXCCMS_CROSS_OFFICE");
         crossOfficeRole.setApp(ccmsApp);
 
         AppRoleDto chambersRole = new AppRoleDto();
-        chambersRole.setId("chambers1");
+        chambersRole.setId(UUID.randomUUID().toString());
         chambersRole.setCcmsCode("XXCCMS_CHAMBERS_USER");
         chambersRole.setApp(ccmsApp);
 
         AppRoleDto counselRole = new AppRoleDto();
-        counselRole.setId("counsel1");
+        counselRole.setId(UUID.randomUUID().toString());
         counselRole.setCcmsCode("XXCCMS_COUNSEL");
         counselRole.setApp(ccmsApp);
 
         AppRoleDto advocateRole = new AppRoleDto();
-        advocateRole.setId("advocate1");
+        advocateRole.setId(UUID.randomUUID().toString());
         advocateRole.setCcmsCode("XXCCMS_ADVOCATE");
         advocateRole.setApp(ccmsApp);
 
@@ -3768,7 +3784,7 @@ class UserControllerTest {
         regularApp.setName("Regular Grant Access App");
 
         AppRoleDto regularRole = new AppRoleDto();
-        regularRole.setId("role1");
+        regularRole.setId(UUID.randomUUID().toString());
         regularRole.setCcmsCode("REGULAR_ROLE");
 
         final List<AppRoleDto> roles = List.of(regularRole);
@@ -3803,7 +3819,7 @@ class UserControllerTest {
         ccmsApp.setName("CCMS App 2");
 
         AppRoleDto ccmsRole = new AppRoleDto();
-        ccmsRole.setId("role1");
+        ccmsRole.setId(UUID.randomUUID().toString());
         ccmsRole.setCcmsCode("XXCCMS_CASE_MANAGER");
 
         final List<AppRoleDto> roles = List.of(ccmsRole);
@@ -3863,9 +3879,12 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(userAppRoles);
         when(userService.getUserOfficesByUserId(userId)).thenReturn(userOffices);
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true);
 
         // When
-        String view = userController.grantAccessCheckAnswers(userId, model);
+        String view = userController.grantAccessCheckAnswers(userId, model, authentication);
 
         // Then
         assertThat(view).isEqualTo("grant-access-check-answers");
@@ -3906,9 +3925,12 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(userAppRoles);
         when(userService.getUserOfficesByUserId(userId)).thenReturn(userOffices);
+        when(loginService.getCurrentProfile(authentication))
+                .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
+        when(roleAssignmentService.canUserAssignRolesForApp(any(), any())).thenReturn(true);
 
         // When
-        String view = userController.grantAccessCheckAnswers(userId, model);
+        String view = userController.grantAccessCheckAnswers(userId, model, authentication);
 
         // Then
         assertThat(view).isEqualTo("grant-access-check-answers");
@@ -4018,11 +4040,36 @@ class UserControllerTest {
         Model testModel = new ExtendedModelMap();
 
         // When
-        String view = userController.createUserFirm(newForm, testSession, testModel);
+        String view = userController.createUserFirm(newForm, testSession, testModel, 10);
 
         // Then
         assertThat(view).isEqualTo("add-user-firm");
         assertThat(testModel.getAttribute("firmSearchForm")).isEqualTo(existingForm);
+        assertThat(testSession.getAttribute("firmSearchForm")).isNull(); // Should be removed after use
+    }
+
+    @Test
+    void testCreateUserFirm_WithExistingFirmInSession_ShouldUseExistingFirm() {
+        // Given
+        FirmDto existingFirm = FirmDto.builder()
+                .id(UUID.randomUUID())
+                .name("Existing Firm")
+                .build();
+
+        FirmSearchForm newForm = FirmSearchForm.builder().build();
+        MockHttpSession testSession = new MockHttpSession();
+        testSession.setAttribute("firm", existingFirm);
+        Model testModel = new ExtendedModelMap();
+
+        // When
+        String view = userController.createUserFirm(newForm, testSession, testModel, 10);
+
+        // Then
+        assertThat(view).isEqualTo("add-user-firm");
+        FirmSearchForm returnedForm = (FirmSearchForm) testModel.getAttribute("firmSearchForm");
+        assertThat(returnedForm).isNotNull();
+        assertThat(returnedForm.getSelectedFirmId()).isEqualTo(existingFirm.getId());
+        assertThat(returnedForm.getFirmSearch()).isEqualTo(existingFirm.getName());
         assertThat(testSession.getAttribute("firmSearchForm")).isNull(); // Should be removed after use
     }
 
@@ -4045,7 +4092,7 @@ class UserControllerTest {
         when(firmService.searchFirms(query)).thenReturn(mockFirms);
 
         // When
-        List<Map<String, String>> result = userController.searchFirms(query);
+        List<Map<String, String>> result = userController.searchFirms(query, 10);
 
         // Then
         assertThat(result).hasSize(2);
@@ -4057,51 +4104,81 @@ class UserControllerTest {
     }
 
     @Test
-    void testSearchFirms_WithEmptyQuery_ShouldReturnEmptyList() {
+    void testSearchFirms_ShouldReturnSubsetOfFirmList() {
+        // Given
+        String query = "Test Firm";
+        List<FirmDto> mockFirms = IntStream.rangeClosed(1, 20)
+                .mapToObj(i -> FirmDto.builder().id(UUID.randomUUID()).name("Test Firm " + i).code(String.format("TF%03d", i)).build())
+                .collect(Collectors.toList());
+
+        when(firmService.searchFirms(query)).thenReturn(mockFirms);
+
+        // When
+        List<Map<String, String>> result = userController.searchFirms(query, 15);
+
+        // Then
+        assertThat(result).hasSize(15);
+        verify(firmService).searchFirms(query);
+    }
+
+    @Test
+    void testSearchFirms_ShouldReturnDefaultCountOfTenFirmsList() {
+        // Given
+        String query = "Test Firm";
+        List<FirmDto> mockFirms = IntStream.rangeClosed(1, 20)
+                .mapToObj(i -> FirmDto.builder().id(UUID.randomUUID()).name("Test Firm " + i).code(String.format("TF%03d", i)).build())
+                .collect(Collectors.toList());
+
+        when(firmService.searchFirms(query)).thenReturn(mockFirms);
+
+        // When
+        List<Map<String, String>> result = userController.searchFirms(query, 5);
+
+        // Then
+        assertThat(mockFirms).hasSize(20);
+        assertThat(result).hasSize(10);
+        verify(firmService).searchFirms(query);
+    }
+
+    @Test
+    void testSearchFirms_ShouldReturnMaxAllowedCountOfHundredFirmsList() {
+        // Given
+        String query = "Test Firm";
+        List<FirmDto> mockFirms = IntStream.rangeClosed(1, 200)
+                .mapToObj(i -> FirmDto.builder().id(UUID.randomUUID()).name("Test Firm " + i).code(String.format("TF%03d", i)).build())
+                .collect(Collectors.toList());
+
+        when(firmService.searchFirms(query)).thenReturn(mockFirms);
+
+        // When
+        List<Map<String, String>> result = userController.searchFirms(query, 101);
+
+        // Then
+        assertThat(mockFirms).hasSize(200);
+        assertThat(result).hasSize(100);
+        verify(firmService).searchFirms(query);
+    }
+
+    @Test
+    void testSearchFirms_WithEmptyQuery_ShouldReturnAllFirms() {
         // Given
         String query = "";
-
-        // When
-        List<Map<String, String>> result = userController.searchFirms(query);
-
-        // Then - Now expecting empty result for short/empty queries
-        assertThat(result).isEmpty();
-        verify(firmService, never()).searchFirms(any());
-    }
-
-    @Test
-    void testSearchFirms_WithShortQuery_ShouldReturnEmptyList() {
-        // Given
-        String query = ""; // Empty string, below the 1-character minimum
-
-        // When
-        List<Map<String, String>> result = userController.searchFirms(query);
-
-        // Then - Should return empty result for queries shorter than 1 character
-        assertThat(result).isEmpty();
-        verify(firmService, never()).searchFirms(any());
-    }
-
-    @Test
-    void testSearchFirms_WithValidQuery_ShouldReturnResults() {
-        // Given
-        String query = "Test"; // 4 characters, meets minimum requirement
         List<FirmDto> mockFirms = List.of(
                 FirmDto.builder()
                         .id(UUID.randomUUID())
-                        .name("Test Firm")
-                        .code("TF001")
+                        .name("All Firms Test")
+                        .code("AFT001")
                         .build());
 
         when(firmService.searchFirms(query)).thenReturn(mockFirms);
 
         // When
-        List<Map<String, String>> result = userController.searchFirms(query);
+        List<Map<String, String>> result = userController.searchFirms(query, 10);
 
         // Then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).get("name")).isEqualTo("Test Firm");
-        assertThat(result.get(0).get("code")).isEqualTo("TF001");
+        assertThat(result.getFirst().get("name")).isEqualTo("All Firms Test");
+        assertThat(result.getFirst().get("code")).isEqualTo("AFT001");
         verify(firmService).searchFirms(query);
     }
 
@@ -4153,7 +4230,7 @@ class UserControllerTest {
         when(firmService.searchFirms(query)).thenReturn(mockFirms);
 
         // When
-        List<Map<String, String>> result = userController.searchFirms(query);
+        List<Map<String, String>> result = userController.searchFirms(query, 10);
 
         // Then
         assertThat(result).hasSize(10); // Should be limited to 10 results
@@ -4207,7 +4284,7 @@ class UserControllerTest {
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/user/create/check-answers");
-        assertThat(testSession.getAttribute("firm")).isEqualTo(mockFirms.get(0));
+        assertThat(testSession.getAttribute("firm")).isEqualTo(mockFirms.getFirst());
         assertThat(((FirmSearchForm) testSession.getAttribute("firmSearchForm")).getFirmSearch()).isEqualTo("Test Firm");
         assertThat(((FirmSearchForm) testSession.getAttribute("firmSearchForm")).getSelectedFirmId()).isEqualTo(firmId);
         verify(firmService).getAllFirmsFromCache();
@@ -4279,7 +4356,7 @@ class UserControllerTest {
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/user/create/check-answers");
-        assertThat(testSession.getAttribute("firm")).isEqualTo(mockFirms.get(0));
+        assertThat(testSession.getAttribute("firm")).isEqualTo(mockFirms.getFirst());
         assertThat(((FirmSearchForm) testSession.getAttribute("firmSearchForm")).getFirmSearch()).isEqualTo("Test Firm");
         assertThat(((FirmSearchForm) testSession.getAttribute("firmSearchForm")).getSelectedFirmId()).isEqualTo(firmId);
         verify(firmService).getAllFirmsFromCache();
@@ -4289,8 +4366,6 @@ class UserControllerTest {
     class DisplayAllUsersTest {
         private final UUID testFirmId = UUID.randomUUID();
         private final UUID userFirmId = UUID.randomUUID();
-        private final String testFirmIdString = testFirmId.toString();
-        private final String invalidFirmId = "invalid-uuid";
         private EntraUser internalUser;
         private EntraUser externalUser;
         private FirmSearchForm firmSearchForm;
@@ -4396,7 +4471,6 @@ class UserControllerTest {
         @Test
         void whenInvalidFirmIdFormat_usesDefaultFirm() {
             // Given
-            FirmDto defaultFirm = new FirmDto(userFirmId, "Default Firm", "DF1");
             firmSearchForm.setSelectedFirmId(null);
 
             when(userService.isInternal(internalUser.getId())).thenReturn(true);
@@ -4417,7 +4491,6 @@ class UserControllerTest {
         @Test
         void whenNoFirmSelected_usesDefaultFirm() {
             // Given
-            FirmDto defaultFirm = new FirmDto(userFirmId, "Default Firm", "DF1");
             firmSearchForm.setSelectedFirmId(null);
 
             when(userService.isInternal(internalUser.getId())).thenReturn(true);
@@ -4515,7 +4588,7 @@ class UserControllerTest {
     }
 
     @Test
-    void has_accessControl() throws NoSuchMethodException {
+    void has_accessControl() {
         Class<?> clazz = UserController.class;
         List<String> canEditMethods = List.of("editUser",
                 "editUserApps", "setSelectedAppsEdit",
@@ -4558,7 +4631,7 @@ class UserControllerTest {
         AuthorizationDeniedException authException = new AuthorizationDeniedException("Access denied");
 
         // When
-        RedirectView result = userController.handleAuthorizationException(authException, mockSession);
+        RedirectView result = userController.handleAuthorizationException(authException, mockSession, new MockHttpServletRequest());
 
         // Then
         assertThat(result.getUrl()).isEqualTo("/not-authorised");
@@ -4572,7 +4645,7 @@ class UserControllerTest {
                 new AccessDeniedException("Access denied");
 
         // When
-        RedirectView result = userController.handleAuthorizationException(accessException, mockSession);
+        RedirectView result = userController.handleAuthorizationException(accessException, mockSession, new MockHttpServletRequest());
 
         // Then
         assertThat(result.getUrl()).isEqualTo("/not-authorised");
@@ -4594,63 +4667,19 @@ class UserControllerTest {
 
         try {
             // When
-            userController.handleAuthorizationException(authException, mockSession);
+            MockHttpServletRequest request = new MockHttpServletRequest();
+            request.setMethod("GET");
+            request.setRequestURI("/admin/users");
+            userController.handleAuthorizationException(authException, mockSession, request);
 
             // Then
             List<ILoggingEvent> logsList = listAppender.list;
             assertThat(logsList).hasSize(1);
-            assertThat(logsList.get(0).getLevel()).isEqualTo(Level.WARN);
-            assertThat(logsList.get(0).getMessage()).isEqualTo("Authorization denied while accessing user: {}");
-            assertThat(logsList.get(0).getArgumentArray()).containsExactly("Test access denied");
+            assertThat(logsList.getFirst().getLevel()).isEqualTo(Level.WARN);
+            assertThat(logsList.getFirst().getMessage()).isEqualTo("Authorization denied while accessing user: reason='{}', method='{}', uri='{}', referer='{}', savedRequest='{}'");
+            assertThat(logsList.getFirst().getArgumentArray()).containsExactly("Test access denied", "GET", "/admin/users", null, null);
         } finally {
             logger.detachAppender(listAppender);
         }
-    }
-
-    @Test
-    void searchFirms_withEmptyQuery_shouldReturnEmptyList() {
-        // When
-        List<Map<String, String>> result = userController.searchFirms("");
-
-        // Then
-        assertThat(result).isEmpty();
-    }
-
-    @Test
-    void searchFirms_withNullQuery_shouldReturnEmptyList() {
-        // When
-        List<Map<String, String>> result = userController.searchFirms(null);
-
-        // Then  
-        assertThat(result).isEmpty();
-    }
-
-    @Test
-    void searchFirms_withWhitespaceQuery_shouldReturnEmptyList() {
-        // When
-        List<Map<String, String>> result = userController.searchFirms("   ");
-
-        // Then
-        assertThat(result).isEmpty();
-    }
-
-    @Test
-    void searchFirms_withSingleCharacter_shouldReturnFirms() {
-        // Given
-        FirmDto firmDto = FirmDto.builder()
-                .id(UUID.randomUUID())
-                .name("Test Firm")
-                .code("TEST")
-                .build();
-        when(firmService.searchFirms("A")).thenReturn(List.of(firmDto));
-
-        // When
-        List<Map<String, String>> result = userController.searchFirms("A");
-
-        // Then
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).get("name")).isEqualTo("Test Firm");
-        assertThat(result.get(0).get("code")).isEqualTo("TEST");
-        assertThat(result.get(0).get("id")).isEqualTo(firmDto.getId().toString());
     }
 }
